[#2596] Fix double scrollbars on Dashboard editor

--- a/client/src/components/dashboard/DashboardEditor.scss
+++ b/client/src/components/dashboard/DashboardEditor.scss
@@ -94,11 +94,6 @@
         height: calc(100vh - 4rem);
     }
 
-    .DashboardVisualisationList,
-    .DashboardEditorCanvasContainer {
-        overflow: auto;
-    }
-
     .DashboardVisualisationList {
         width: 22rem;
     }
